<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048 Puzzle Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_layout">NewLayout</string>
    <string name="title_activity_tryand_error">TryandError</string>
    <string name="title_activity_new_highscore">NewHighscoreActivity</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="title_activity_new_menu_option">NewMenuOption</string>
    <string name="spinner_title">Select Category</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string-array name="targetTile">
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
        <item>4096</item>
        <item>8192</item>
    </string-array>
    <string-array name="gameMode">
        <item>Normal</item>
        <item>Time Rush</item>
        <item>Limited Moves (30)</item>
    </string-array>
    <string-array name="timeRush">
        <item>60 sec (1 min)</item>
        <item>120 sec (2 min)</item>
        <item>240 sec (4 min)</item>
        <item>360 sec (6 min)</item>
        <item>600 sec (10 min)</item>
    </string-array>
    <string-array name="tile">
        <item>3 Tiles</item>
        <item>4 Tiles</item>
        <item>5 Tiles</item>
        <item>6 Tiles</item>
        <item>7 Tiles</item>
        <item>8 Tiles</item>
    </string-array>

    <string name="bomb_booster_description">Make the next square a Destroyer.\nPurchase 1 for 2000 points.</string>
    <string name="x2_multiplier_description">Make the next square a 2x Multiplier.\nPurchase 1 for 3000 points.</string>
    <string name="continuous5times4_booster_description">Make the next square a 4.\nPurchase 5 for 1500 points.</string>
    <string name="continuous3times8_booster_description">Make the next square a 8.\nPurchase 3 for 1500 points.</string>
    <string name="booster_16_description">Make the next square a 16.\nPurchase 3 for 2500 points.</string>
    <string name="booster_32_description">Make the next square a 32.\nPurchase 1 for 2500 points.</string>
    <string name="booster_64_description">Make the next square a 64.\nPurchase 1 for 4000 points.</string>
    <string name="booster_128_description">Make the next square a 128.\nPurchase 1 for7000 points.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <!-- Google Play Service Strings -->
    <string name="google_app_id">823317788464</string>

    <!-- Google Play Service Leader board Strings -->
    <string name="Leader_Board_all">CgkIsO7BjPsXEAIQCw</string>
    <string name="Leader_Board_normal">CgkIsO7BjPsXEAIQCQ</string>
    <string name="Leader_Board_timed">CgkIsO7BjPsXEAIQAA</string>
    <string name="Leader_Board_limited">CgkIsO7BjPsXEAIQCg</string>

    <!-- Google Play Service Achievement Strings Level 1 -->
    <string name="newbie_achievement">CgkIsO7BjPsXEAIQAg</string>
    <string name="promoter_achievement">CgkIsO7BjPsXEAIQBA</string>
    <string name="fbfan_achievement">CgkIsO7BjPsXEAIQEQ</string>

    <!-- Google Play Service Achievement Strings Level 2 -->
    <string name="novice_achievement">CgkIsO7BjPsXEAIQCA</string>
    <string name="rookie_achievement">CgkIsO7BjPsXEAIQBg</string>
    <string name="telented_achievement">CgkIsO7BjPsXEAIQBw</string>

    <!-- Google Play Service Achievement Strings Level 3 -->
    <string name="winner_achievement">CgkIsO7BjPsXEAIQBQ</string>
    <string name="Proficient_achievement">CgkIsO7BjPsXEAIQDQ</string>
    <string name="Expert_achievement">CgkIsO7BjPsXEAIQDg</string>
    <string name="Supreme_achievement">CgkIsO7BjPsXEAIQDw</string>
    <string name="Champion_achievement">CgkIsO7BjPsXEAIQDA</string>

</resources>