<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <TextView
        android:id="@+id/boosterDialogLayoutTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="7dip"
        android:layout_weight="0.03"
        android:gravity="center"
        android:text="POWERUPS"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light" />

    <ScrollView
        android:id="@+id/boosterScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boosterDialogLayout_ShowPoints"
        android:layout_below="@+id/boosterDialogLayoutTitle"
        android:layout_weight="0.8" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/continuous_5_times_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_4" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Four Squares"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/continuous5times4_booster_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/continuous_3_times_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_8" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Eight Squares"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/continuous3times8_booster_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booster_16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_16" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sixteen Squares"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/booster_16_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booster_32"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_32" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="32 Square"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/booster_32_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booster_64"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_64" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="64 Square"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/booster_64_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booster_128"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_128" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="128 Square"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/booster_128_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/x2_booster"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/x2_tile" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2x Multipliers"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/x2_multiplier_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bombBooster"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:padding="3dip"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bomb_tile" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Destroyer"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:text="@string/bomb_booster_description" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/boosterDialogLayout_ShowPoints"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="7dip"
        android:layout_weight="0.03"
        android:gravity="center"
        android:text="Points: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light" />

</LinearLayout>